# harjoitustyo

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/TheProject/dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: game_loop.py  index.py  level.py  projectile.py  settings.py
src/logic/: collision_detector.py  event_handler.py  game_loop.py
src/pygameEssentials/: renderer.py
src/pygame_essentials/: clock.py  renderer.py
src/repositories/: level.py
src/services/: level.py  settings.py
src/sprites/: flag.py  player.py  projectile.py  tile.py
src/tests/: collision_test.py  flag_test.py  game_loop_test.py  level_test.py  player_test.py
src/tests/uiTests/: uiLayer_test.py
src/ui/: uiLayer.py
