[tool.poetry]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Roberto Martinez Keisala <robomarti@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
